--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@workspace/ui": "workspace:*",
+    "@repo/shared":"workspace:*",
+    "@repo/api":"workspace:*",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
