--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@hello-pangea/dnd": "^18.0.1",
     "@hono/standard-validator": "^0.2.2",
+    "@repo/db":"workspace:*",
     "@hono/swagger-ui": "^0.5.3",
     "@hookform/resolvers": "^5.2.2",
     "@pulumi/awsx": "^3.1.0",
@@ -33,6 +34,7 @@
     "@tanstack/react-query": "^5.90.20",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.3",
+    "better-auth": "^1.4.18",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "drizzle-kit": "^0.31.8",
