--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -12,10 +12,11 @@
     "dev": "pnpm exec tsx watch --require dotenv/config src/index.ts",
     "build": "tsc --noEmit && tsup src/index.ts --format cjs,esm --dts",
     "start": "node dist/index.js",
-    "build:spec":"pnpm exec tsx scripts/gen-spec.ts"
+    "build:spec": "pnpm exec tsx scripts/gen-spec.ts"
   },
   "dependencies": {
     "@hono/node-server": "^1.19.9",
+    "@repo/auth": "workspace:*",
     "@repo/db": "workspace:*",
     "@repo/shared": "workspace:*",
     "drizzle-orm": "^0.45.1",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
+    "dotenv-cli": "^11.0.0",
     "tsup": "^8.5.1",
     "tsx": "^4.7.1",
     "typescript": "^5.8.3"
