--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -11,7 +11,7 @@
     "skipLibCheck": true,
     "esModuleInterop": true,
     "types": ["node"],
-    "rootDir": "src",
+    //"rootDir": "src",
     "outDir": "dist",
     "baseUrl": ".", 
     "paths": {
