--- a/packages/server/vercel.json
+++ b/packages/server/vercel.json
@@ -1,5 +1,9 @@
 {
+  "version": 2,
   "rewrites": [
-    { "source": "/api/(.*)", "destination": "/src/index.ts" }
+    { 
+      "source": "/api/(.*)", 
+      "destination": "src/index.ts" 
+    }
   ]
 }
