--- a/packages/server/vercel.json
+++ b/packages/server/vercel.json
@@ -3,9 +3,6 @@
   "buildCommand": "pnpm build",
   "outputDirectory": "dist",
   "rewrites": [
-    { 
-      "source": "/api/(.*)", 
-      "destination": "index.js" 
-    }
+    { "source": "/api/(.*)", "destination": "index.js" }
   ]
 }
