--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -10,8 +10,8 @@
   },
   "scripts": {
     "dev": "pnpm exec tsx watch --require dotenv/config src/index.ts",
-    "build": "tsc --noEmit && tsup src/index.ts --format cjs,esm --dts",
-    "start": "node dist/index.js",
+    "build": "tsup src/index.ts --format esm --clean --no-splitting --minify",
+  "start": "node dist/index.js",
     "build:spec": "pnpm exec tsx scripts/gen-spec.ts"
   },
   "dependencies": {
