--- a/packages/server/vercel.json
+++ b/packages/server/vercel.json
@@ -1,8 +1,11 @@
 {
   "version": 2,
   "buildCommand": "pnpm build",
-  "outputDirectory": "dist",
-  "rewrites": [
-    { "source": "/api/(.*)", "destination": "index.js" }
+  "outputDirectory": "api",
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "/index.js"
+    }
   ]
 }
