--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -10,18 +10,21 @@
   },
   "scripts": {
     "dev": "pnpm exec tsx watch --require dotenv/config src/index.ts",
-      "build": "tsc --noEmit && tsup",
+    "build": "tsc --noEmit && tsup",
     "start": "node ./api/index.js",
     "build:spec": "pnpm exec tsx scripts/gen-spec.ts"
   },
   "dependencies": {
+    "@better-auth/expo": "^1.4.18",
     "@hono/node-server": "^1.19.9",
     "@repo/db": "workspace:*",
     "@repo/shared": "workspace:*",
     "drizzle-orm": "^0.45.1",
     "hono": "^4.11.7",
     "nanoid": "^5.1.1",
-    "zod": "^3.23.1"
+    "pg": "^8.18.0",
+    "dotenv": "^17.2.4",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
