--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,3 +1,10 @@
 packages:
   - "apps/*"
   - "packages/*"
+
+catalog:
+  react: "19.1.0"
+  react-dom: "19.1.0"
+  zod: "^4.0.0"
+  turbo: "^2.0.0"
+  typescript: "5.9.3"
