--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -6,7 +6,7 @@
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "noEmit": true,
-    "lib": ["ES2022"],
+    "lib": ["ES2022","DOM"],
     "verbatimModuleSyntax": true,
     "strict": true,
     "skipLibCheck": true,
