--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,8 +3,6 @@ packages:
   - "packages/*"
 
 catalog:
-  react: "19.1.0"
-  react-dom: "19.1.0"
-  zod: "^4.0.0"
-  turbo: "^2.0.0"
-  typescript: "5.9.3"
+  react: 19.1.0
+  react-dom: 19.1.0
+  zod: ^4.0.0
