--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "todo-worker",
   "version": "0.0.1",
   "private": true,
+  "workspaces":["apps/*","packages/*"],
+    "resolutions": {
+    "react": "^19.1.0"
+  },
   "scripts": {
     "build": "turbo build",
     "dev": "turbo dev",
@@ -17,6 +21,7 @@
     "openapi-typescript": "^7.13.0",
     "prettier": "^3.8.1",
     "turbo": "^2.8.1",
+
     "typescript": "5.9.3"
   },
   "packageManager": "pnpm@10.4.1",
@@ -47,7 +52,9 @@
     "react-hook-form": "^7.71.1",
     "sonner": "^2.0.7",
     "zod": "^4.3.6",
-    "zod-openapi": "4"
+    "zod-openapi": "4",
+    "react":"19.1.0",
+    "react-dom":"19.1.0"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
