--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -19,11 +19,12 @@
     "@hono/node-server": "^1.19.9",
     "@repo/db": "workspace:*",
     "@repo/shared": "workspace:*",
+    "better-auth": "^1.4.18",
+    "dotenv": "^17.2.4",
     "drizzle-orm": "^0.45.1",
     "hono": "^4.11.7",
     "nanoid": "^5.1.1",
     "pg": "^8.18.0",
-    "dotenv": "^17.2.4",
     "zod": "^4.3.6"
   },
   "devDependencies": {
