--- a/packages/server/vercel.json
+++ b/packages/server/vercel.json
@@ -1,15 +1,15 @@
 {
   "version": 2,
   "buildCommand": "pnpm build",
-  "functions":{
-  "api/index.js": {
-      "maxDuration": 10
+  "functions": {
+    "api/index.ts": {
+      "maxDuration": 30
     }
   },
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/api/index.js"
+      "dest": "/api/index.ts"
     }
   ]
 }
