--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -17,9 +17,9 @@
     "lucide-react": "^0.563.0",
     "next-themes": "^0.4.6",
     "radix-ui": "^1.4.3",
-    "react": "^19.2.4",
+    "react": "catalog:",
     "react-day-picker": "^9.13.1",
-    "react-dom": "^19.2.4",
+    "react-dom": "catalog:",
     "react-resizable-panels": "^4.6.2",
     "recharts": "2.15.4",
     "shadcn": "^3.8.4",
