--- a/packages/server/vercel.json
+++ b/packages/server/vercel.json
@@ -1,10 +1,15 @@
 {
   "version": 2,
   "buildCommand": "pnpm build",
+  "functions": {
+    "api/index.js": {
+      "maxDuration": 30
+    }
+  },
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/api/index.ts"
+      "dest": "/api/index.js"
     }
   ]
 }
