--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -3,19 +3,18 @@
   "private": true,
   "type": "module",
   "version": "1.0.0",
-  "main": "./dist/index.js",
+  "main": "./api/index.js",
   "types": "./src/index.ts",
   "exports": {
-    ".": "./dist/index.js"
+    ".": ["./src/index.ts","./api/index.js"]
   },
   "scripts": {
     "dev": "pnpm exec tsx watch --require dotenv/config src/index.ts",
     "build": "tsc --noEmit && tsup",
-    "start": "node ./dist/index.js",
+    "start": "node ./api/index.js",
     "build:spec": "pnpm exec tsx scripts/gen-spec.ts"
   },
   "dependencies": {
-    "@better-auth/expo": "^1.4.18",
     "@hono/node-server": "^1.19.9",
     "@repo/db": "workspace:*",
     "@repo/shared": "workspace:*",
