--- a/packages/server/vercel.json
+++ b/packages/server/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "buildCommand": "pnpm build",
   "functions": {
-    "api/index.js": {
+    "api/index.ts": {
       "maxDuration": 30
     }
   },
